// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple-elements.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>aaa</p>

<p>aaaa bbbb cccc dddd eeee ffff gggg hhhh iiii jjjj kkkk llll mmmm nnnn oooo pppp qqqq rrrr ssss tttt</p>

<div>111<p>222</p></div>

<br /><br />

<p class="foo">bar</p>

<hr class="alex" />
=====================================output=====================================
<p>
  aaa
</p>

<p>
  aaaa bbbb cccc dddd eeee ffff gggg hhhh iiii jjjj kkkk llll mmmm nnnn oooo
  pppp qqqq rrrr ssss tttt
</p>

<div>
  111
  <p>
    222
  </p>
</div>

<br />
<br />

<p class="foo">
  bar
</p>

<hr class="alex" />

================================================================================
`;

exports[`simple-srapping-text.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
aaaaaa bbbbbbb ccccccc dddddd eeeeee ffffff gggggg hhhhh iiiiii jjjjj kkkkkk llllll mmmmm
=====================================output=====================================
aaaaaa bbbbbbb ccccccc dddddd eeeeee ffffff gggggg hhhhh iiiiii jjjjj kkkkkk
llllll mmmmm

================================================================================
`;

exports[`simple-text.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
hello

a b c

1  2      3
=====================================output=====================================
hello a b c 1 2 3

================================================================================
`;
